--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 		<header>
 			<h1>Chemotaxis</h1>
 			<h3>Click to divert the bacteria</h3>
+			<button class="btn1" onclick = "window.location.reload();">Reset Bacteria</button>
 		</header>
 			<section id="content">
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
 				</canvas>
 		    </section>
-	    <footer>
-		    Artiom Covali - APCSA
-	    </footer>
+	   <button class="ftr"><a href="mailto: arcovali@s.sfusd.edu" target="_blank">© Artiom Covali 2022- APCSA</a></button>
 	</body>
 </html>
