--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
 				</canvas>
 		    </section>
-	   <button class="ftr"><a href="mailto: arcovali@s.sfusd.edu" target="_blank">© Artiom Covali 2022- APCSA</a></button>
+	   <button class="ftr"><a href="mailto: arcovali@s.sfusd.edu" target="_blank">© Artiom Covali - 2022</a></button>
 	</body>
 </html>
